perf: add sonarqube refactor for code quality